--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -1,14 +1,17 @@
 .mainContainer {
-  background: #000A12;
+  background:  $black;
   padding: 1.1% 1%;
   font-family: $workSans;
+
   .navContainer {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     padding-right: 1rem;
+
     .Bars {
       padding-top: 5px;
+
       .bars-icon {
         color: white;
         font-size: 1.4rem;
@@ -21,40 +24,49 @@
       justify-content: space-evenly;
       align-items: center;
       margin: 0 .4rem;
-      a.active{
+
+      a.active {
         border-bottom: 3px solid #00E6BC;
       }
-      img{
+
+      img {
         height: 2rem;
         width: auto;
       }
+
       .Groa-NavLink {
         &:hover {
-          color:white;
+          color: white;
         }
       }
+
       .NavLink {
         color: white;
         text-decoration: none;
         margin: 0 1%;
         transition: all 500ms linear;
-  
+
         &:hover {
-          color:white;
+          color: white;
         }
-      } 
+      }
     }
+
     @media only screen and (max-width: 750px) {
-      .watchlist, .recommended, .explore,
-      .dropdown-hover .angle-down-icon{
+
+      .watchlist,
+      .recommended,
+      .explore,
+      .dropdown-hover .angle-down-icon {
         flex: .000000001;
         white-space: pre;
         padding: 0;
         font-size: 0;
         margin: 0;
-        opacity: 0;      
+        opacity: 0;
       }
     }
+
     .searchContainer {
       background-color: $gray2;
       padding: .4rem;
@@ -65,33 +77,39 @@
       overflow: hidden;
       transition: all 500ms linear;
       min-width: 20vw;
+
       .search-wrapper {
         display: flex;
         align-items: center;
         width: 75%;
       }
-      .search-icon, 
+
+      .search-icon,
       .backspace-icon {
         color: white;
         opacity: .4;
         font-size: 1.2rem;
         padding: .2rem;
       }
+
       .backspace-icon {
         cursor: pointer;
       }
+
       .searchBox {
         font-size: 1rem;
         background-color: $gray2;
         border: none;
         color: $white;
       }
-      input:focus{
+
+      input:focus {
         outline: none;
       }
+
       input:-webkit-autofill,
-      input:-webkit-autofill:hover, 
-      input:-webkit-autofill:focus, 
+      input:-webkit-autofill:hover,
+      input:-webkit-autofill:focus,
       // input:-webkit-autofill:active  {
       //   -webkit-box-shadow: 0 0 0 30px $gray2 inset !important;
       // }
@@ -99,6 +117,7 @@
         -webkit-text-fill-color: $white !important;
       }
     }
+
     button {
       white-space: nowrap;
       font-size: 1rem;
@@ -109,25 +128,29 @@
       cursor: pointer;
       transition: all 500ms linear;
     }
-    
+
     @media only screen and (max-width: 750px) {
       .Links {
         justify-content: space-between;
       }
+
       button {
         font-size: 0;
         padding: .2rem;
-        background-color: rgba(28,28,28,0);
+        background-color: rgba(28, 28, 28, 0);
         border: none;
       }
+
       .sync-icon {
         font-size: initial;
         color: $white;
       }
+
       .searchContainer {
         min-width: 35vw;
       }
     }
+
     .fa-icons {
       width: 14%;
       display: flex;
@@ -136,6 +159,7 @@
       color: white;
     }
   }
+
   button.hidden,
   .searchContainer.hidden,
   .hidden {
@@ -147,6 +171,7 @@
     margin: 0;
     opacity: 0;
   }
+
   .dropdown-hover {
     padding: .25rem .5rem;
     position: relative;
@@ -154,14 +179,17 @@
     cursor: pointer;
     display: flex;
     align-items: center;
+
     .angle-down-icon {
       padding-left: .5rem;
     }
+
     .dropdown-content {
       display: none;
     }
+
     &:hover {
-      .dropdown-content{
+      .dropdown-content {
         display: flex;
         flex-direction: column;
         position: absolute;
@@ -171,7 +199,7 @@
         overflow: hidden;
         z-index: 5;
         border: 1px solid $gray1;
-        
+
         .NavLink {
           border-top: 1px solid $gray1;
           color: $black;
@@ -181,25 +209,34 @@
           background: $white;
           white-space: nowrap;
           text-align: center;
+
           &:hover {
             background-color: $gray1;
           }
+
           @media(hover: hover) and (pointer: fine) {
             &:hover {
               background-color: $gray1;
             }
           }
         }
-        .watchlist-menu, .recommended-menu, .explore-menu {
+
+        .watchlist-menu,
+        .recommended-menu,
+        .explore-menu {
           display: none;
         }
+
         @media only screen and (max-width: 750px) {
-          .watchlist-menu, .recommended-menu, .explore-menu  {
-            display: block; 
+
+          .watchlist-menu,
+          .recommended-menu,
+          .explore-menu {
+            display: block;
           }
         }
       }
     }
   }
-  
+
 }
