--- a/src/scss/components/_onboarding.scss
+++ b/src/scss/components/_onboarding.scss
@@ -15,12 +15,14 @@
     justify-content: flex-end;
     padding: 1.1% 1%;
   }
+
   .box-container {
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
     width: 85%;
   }
+
   .box-left {
     width: 45%;
     margin: 0 1%;
@@ -33,18 +35,22 @@
 
     .text-container {
       white-space: nowrap;
+
       h1 {
         font-size: 5vw;
       }
+
       h5 {
         font-size: 1.5vw;
         font-weight: normal;
         padding-top: 2rem;
       }
     }
+
     .image-wrapper {
       width: 75%;
       padding: 5% 0;
+
       .logo {
         width: 100%;
       }
@@ -82,6 +88,7 @@
       margin: 2.6% auto;
       margin-bottom: 1rem;
     }
+
     input::placeholder {
       font-size: 1.1rem;
       color: #d8d8d8;
@@ -98,6 +105,7 @@
         flex-direction: row;
         padding-top: 13px;
         align-items: center;
+
         p {
           color: black;
           white-space: nowrap;
@@ -124,16 +132,18 @@
           font-size: 14px;
           margin-bottom: 2%;
         }
-        
+
         .fancy {
           line-height: 0.5;
           text-align: center;
           margin: 1% 0;
         }
+
         .fancy span {
           display: inline-block;
-          position: relative;  
+          position: relative;
         }
+
         .fancy span:before,
         .fancy span:after {
           content: "";
@@ -143,93 +153,107 @@
           top: 0;
           width: 104px;
         }
+
         .fancy span:before {
           right: 100%;
           margin-right: 15px;
         }
+
         .fancy span:after {
           left: 100%;
           margin-left: 15px;
         }
-        
-      //Gogole Sign in btn
-      .google-btn {
-        width: 100%;
-        height: 50px;
-        background-color: $white;
-        border-radius: 4px;
-        box-shadow: 0 3px 4px 0 rgba(0,0,0,.25);
-        margin-top: 2%;
-        .google-icon-wrapper {
-          position: absolute;
-          margin-top: 4px;
-          margin-left: 1px;
-          width: 40px;
-          height: 40px;
-          border-radius: 2px;
+
+        //Gogole Sign in btn
+        .google-btn {
+          width: 100%;
+          height: 50px;
           background-color: $white;
+          border-radius: 4px;
+          box-shadow: 0 3px 4px 0 rgba(0, 0, 0, .25);
+          margin-top: 2%;
+
+          .google-icon-wrapper {
+            position: absolute;
+            margin-top: 4px;
+            margin-left: 1px;
+            width: 40px;
+            height: 40px;
+            border-radius: 2px;
+            background-color: $white;
+          }
+
+          .google-icon {
+            margin-top: 11px;
+            margin-left: 11px;
+            width: 18px;
+            height: 18px;
+          }
+
+          .btn-text {
+            // float: right;
+            margin: 7% 2% 0 30%;
+            color: $black;
+            font-size: 14px;
+            letter-spacing: 0.2px;
+            font-family: "Roboto";
+          }
+
+          &:hover {
+            box-shadow: 0 0 6px $google-blue;
+          }
+
+          &:active {
+            background: $white;
+          }
         }
-        .google-icon {
-          margin-top: 11px;
-          margin-left: 11px;
-          width: 18px;
-          height: 18px;
+
+        .fb-btn {
+          width: 100%;
+          height: 50px;
+          background-color: #3A5A97;
+          border-radius: 4px;
+          box-shadow: 0 3px 4px 0 rgba(0, 0, 0, .25);
+          margin-top: 2%;
+
+          .fb-icon-wrapper {
+            position: absolute;
+            margin-top: 4px;
+            margin-left: 1px;
+            width: 40px;
+            height: 40px;
+            border-radius: 2px;
+            // background-color: $white;
+          }
+
+          .fb-icon {
+            // position: absolute;
+            margin-top: 11px;
+            margin-left: 11px;
+            width: 18px;
+            height: 18px;
+          }
+
+          .btn-text {
+            // float: right;
+            margin: 7% 2% 0 30%;
+            color: $white;
+            font-size: 14px;
+            letter-spacing: 0.2px;
+            font-family: "Roboto";
+          }
+
+          &:hover {
+            box-shadow: 0 0 6px $google-blue;
+          }
+
+          &:active {
+            background: $white;
+          }
         }
-        .btn-text {
-          // float: right;
-          margin:  7% 2% 0 30%;
-          color: $black;
-          font-size: 14px;
-          letter-spacing: 0.2px;
-          font-family: "Roboto";
-        }
-        &:hover {
-          box-shadow: 0 0 6px $google-blue;
-        }
-        &:active {
-          background: $white;
-        }
-      }
-      .fb-btn {
-        width: 100%;
-        height: 50px;
-        background-color: #3A5A97;
-        border-radius: 4px;
-        box-shadow: 0 3px 4px 0 rgba(0,0,0,.25);
-        margin-top: 2%;
-        .fb-icon-wrapper {
-          position: absolute;
-          margin-top: 4px;
-          margin-left: 1px;
-          width: 40px;
-          height: 40px;
-          border-radius: 2px;
-          // background-color: $white;
-        }
-        .fb-icon {
-          // position: absolute;
-          margin-top: 11px;
-          margin-left: 11px;
-          width: 18px;
-          height: 18px;
-        }
-        .btn-text {
-          // float: right;
-          margin:  7% 2% 0 30%;
-          color: $white;
-          font-size: 14px;
-          letter-spacing: 0.2px;
-          font-family: "Roboto";
-        }
-        &:hover {
-          box-shadow: 0 0 6px $google-blue;
-        }
-        &:active {
-          background: $white;
-        }
-      }
       }
     }
+
     .bottomAccount {
       display: flex;
       flex-direction: column;
@@ -240,32 +264,35 @@
         color: #2477e5;
         font-size: 18px;
       }
+
       .link {
-          display: flex;
-          width: 100%;
-          height: auto;
-          font-size: 1rem;
-          text-decoration: none;
-          // justify-content: flex-end;
-          flex-direction: column-reverse;
-          align-items: center;
-          color: $white;
-      
-          &:hover {
-            color: $turqoise3;
-            font-weight: bold;
-          }
+        display: flex;
+        width: 100%;
+        height: auto;
+        font-size: 1rem;
+        text-decoration: none;
+        // justify-content: flex-end;
+        flex-direction: column-reverse;
+        align-items: center;
+        color: $white;
+
+        &:hover {
+          color: $turqoise3;
+          font-weight: bold;
         }
-        
+      }
+
     }
+
     .callingError {
       color: red;
       display: flex;
       justify-content: center;
     }
+
     // .about-us{
     //   display: flex;
-    
+
     //   justify-content: space-evenly;
     // text-align: center;
     // font-size: 14px;
@@ -276,16 +303,19 @@
     .box-container {
       flex-direction: column;
       align-items: center;
+
       .box-left {
         width: 80%;
         margin: 0;
         padding: 0;
+
         .text-container {
           margin: 0 auto;
           width: 100%;
           h1 {
             font-size: 10vw;
           }
+
           h5 {
             font-size: 3vw;
           }
@@ -294,10 +324,12 @@
           width: 100%;
         }
       }
+
       .box-right {
         width: 100%;
         margin: 0;
         padding: 0;
+
         .form {
           margin: 0 auto;
           padding: 0;
@@ -305,90 +337,107 @@
           width: 100%;
           color: $white;
         }
+
         .btn-container {
-        .google-btn {
-        .btn-text {
-          // float: right;
-          margin:  4% 2% 0 38%;
-        }
-      }
-      .fb-btn {
-        .btn-text {
-          // float: right;
-          margin:  4% 2% 0 38%;
-        }
-      }
-      }
-    }
-  }
-  @media (max-width: 600px) {
-    .box-container {
-      flex-direction: column;
-      align-items: center;
-      .box-left {
-        width: 80%;
-        margin: 0;
-        padding: 0;
-        .text-container {
-          margin: 0 auto;
-          width: 100%;
-          h1 {
-            display: none;
-          }
-          h5 {
-            display: none;
-          }
-        }
-        .image-wrapper {
-          display: none;
-          .logo {
-            display: none;
-          }
-        }
-      }
-      .box-right {
-        margin: 2%;
-        padding: 0%;
-        // border-radius: 4px;
-        background: $black;
-        // width: 100%;
-        height: 100%;
-        .form {
-          max-width: 100%
-        }
-         .bottom-form {
-          .btn-container {
-            .signup-btn,
-            button.login-btn {
-              margin-top:3%;
-            }
-            .fancy span:before,
-        .fancy span:after {
-          content: "";
-      
-          width: 800%;
-        }
-            .google-btn {
-              .btn-text {
-                margin: 4% 2% 0 35%;
+          .google-btn {
+            .btn-text {
+              // float: right;
+              margin: 4% 2% 0 38%;
             }
           }
+
           .fb-btn {
             .btn-text {
-              margin: 4% 2% 0 35%;
+              // float: right;
+              margin: 4% 2% 0 38%;
+            }
           }
         }
+      }
+    }
+
+    @media (max-width: 600px) {
+      .box-container {
+        flex-direction: column;
+        align-items: center;
+
+        .box-left {
+          width: 80%;
+          margin: 0;
+          padding: 0;
+
+          .text-container {
+            margin: 0 auto;
+            width: 100%;
+
+            h1 {
+              display: none;
+            }
+
+            h5 {
+              display: none;
+            }
+          }
+
+          .image-wrapper {
+            display: none;
+
+            .logo {
+              display: none;
+            }
+          }
         }
-        .bottomAccount {
-          padding: 2%;
-    
-          .loginAccount {
-            font-size: 9px;
+
+        .box-right {
+          margin: 2%;
+          padding: 0%;
+          // border-radius: 4px;
+          background: $black;
+          // width: 100%;
+          height: 100%;
+
+          .form {
+            max-width: 100%
+          }
+
+          .bottom-form {
+            .btn-container {
+
+              .signup-btn,
+              button.login-btn {
+                margin-top: 3%;
+              }
+
+              .fancy span:before,
+              .fancy span:after {
+                content: "";
+
+                width: 800%;
+              }
+
+              .google-btn {
+                .btn-text {
+                  margin: 4% 2% 0 35%;
+                }
+              }
+
+              .fb-btn {
+                .btn-text {
+                  margin: 4% 2% 0 35%;
+                }
+              }
+            }
+
+            .bottomAccount {
+              padding: 2%;
+
+              .loginAccount {
+                font-size: 9px;
+              }
+            }
           }
         }
       }
     }
   }
-  }
-}
 }
