add side navbar and user drop down menu updated

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -462,6 +462,9 @@
       justify-content: space-evenly;
       align-items: center;
       padding-right: 1rem; }
+      @media only screen and (max-width: 750px) {
+        #root .mainContainer .navContainer {
+          justify-content: space-around; } }
       #root .mainContainer .navContainer .Bars {
         padding-top: 5px; }
         #root .mainContainer .navContainer .Bars .bars-icon {
@@ -487,7 +490,7 @@
           transition: all 500ms linear; }
           #root .mainContainer .navContainer .Links .NavLink:hover {
             color: white; }
-      @media only screen and (max-width: 750px) {
+      @media only screen and (max-width: 600px) {
         #root .mainContainer .navContainer .watchlist,
         #root .mainContainer .navContainer .recommended,
         #root .mainContainer .navContainer .explore,
@@ -543,7 +546,9 @@
         transition: all 500ms linear; }
       @media only screen and (max-width: 750px) {
         #root .mainContainer .navContainer .Links {
-          justify-content: space-between; }
+          justify-content: space-between;
+          padding: 0%;
+          margin-right: 0%; }
         #root .mainContainer .navContainer button {
           font-size: 0;
           padding: .2rem;
@@ -605,12 +610,14 @@
           @media (hover: hover) and (pointer: fine) {
             #root .mainContainer .dropdown-hover:hover .dropdown-content .NavLink:hover {
               background-color: #D8D8D8; } }
-        #root .mainContainer .dropdown-hover:hover .dropdown-content .watchlist-menu,
+        #root .mainContainer .dropdown-hover:hover .dropdown-content .watchlist-menu {
+          display: none; }
         #root .mainContainer .dropdown-hover:hover .dropdown-content .recommended-menu,
         #root .mainContainer .dropdown-hover:hover .dropdown-content .explore-menu {
           display: none; }
         @media only screen and (max-width: 750px) {
-          #root .mainContainer .dropdown-hover:hover .dropdown-content .watchlist-menu,
+          #root .mainContainer .dropdown-hover:hover .dropdown-content .watchlist-menu {
+            display: none; }
           #root .mainContainer .dropdown-hover:hover .dropdown-content .recommended-menu,
           #root .mainContainer .dropdown-hover:hover .dropdown-content .explore-menu {
             display: block; } }
