--- a/src/scss/components/_onboardingNavLinks.scss
+++ b/src/scss/components/_onboardingNavLinks.scss
@@ -25,13 +25,13 @@
 }
 
 @media (max-width: 600px) {
-  img {
+  // img {
     // position: absolute;
-    width: 136px;
-    height: 38px;
-    left: 130px;
-    top: 102px;
-  }
+    // width: 136px;
+    // height: 38px;
+    // left: 130px;
+    // top: 102px;
+  // }
 
   .signin-title {
     display: flex;
