--- a/src/scss/components/_recommendations.scss
+++ b/src/scss/components/_recommendations.scss
@@ -28,12 +28,12 @@
           position: relative;
           width: 60%;
           overflow: hidden;
-          img {
-            height: 100%;
-            position: absolute;
-            right: 0;
-            object-fit: cover;
-          }
+          // img {
+          //   height: 100%;
+          //   position: absolute;
+          //   right: 0;
+          //   object-fit: cover;
+          // }
         }
         .text-container {
           color: black;
