--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,5 @@
-// #root {
-//   @import "abstracts/all";
-//   @import "base/all";
-//   @import "components/all";
-// }
+#root {
+  @import "abstracts/all";
+  @import "base/all";
+  @import "components/all";
+}
