--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -61,7 +61,7 @@
 #root html {
   font-family: "Work Sans", sans-serif;
   font-weight: normal;
-  color: #505050;
+  color: #212120;
   font-size: 14px;
 }
 
@@ -102,13 +102,14 @@
 
 #root .App {
   min-height: 100vh;
+  background-color: #212120;
 }
 
 #root .container.register-component,
 #root .container.login-component {
   font-family: "Work Sans", sans-serif;
   color: white;
-  background: #505050;
+  background: #212120;
   margin: 0 auto;
   width: 100%;
   min-height: 100vh;
@@ -211,7 +212,7 @@
   margin: auto;
   padding: 3%;
   border-radius: 4px;
-  background: #505050;
+  background: #212120;
   width: 100%;
   max-width: 518px;
   height: 550px;
@@ -331,7 +332,7 @@
   height: 50px;
   border-radius: 4px;
   background: #00B392;
-  color: #505050;
+  color: #212120;
   font-size: 14px;
   margin-bottom: 2%;
 }
@@ -406,7 +407,7 @@
 #root .container.register-component .box-right .bottom-form .btn-container .google-btn .btn-text,
 #root .container.login-component .box-right .bottom-form .btn-container .google-btn .btn-text {
   margin: 7% 2% 0 30%;
-  color: #505050;
+  color: #212120;
   font-size: 14px;
   letter-spacing: 0.2px;
   font-family: "Roboto";
@@ -627,7 +628,7 @@
   #root .container.login-component .box-container .box-right {
     margin: 2%;
     padding: 0%;
-    background: #505050;
+    background: #212120;
     height: 100%;
   }
   #root .container.register-component .box-container .box-right .form,
@@ -722,7 +723,7 @@
 }
 
 #root .mainContainer {
-  background: #505050;
+  background: #212120;
   padding: 1.1% 1%;
   font-family: "Work Sans", sans-serif;
 }
@@ -971,7 +972,7 @@
 
 #root .mainContainer .dropdown-hover:hover .dropdown-content .NavLink {
   border-top: 1px solid #D8D8D8;
-  color: #505050;
+  color: #212120;
   text-decoration: none;
   font-size: 1.1rem;
   padding: 1rem 1.5rem;
@@ -1443,39 +1444,7 @@
   }
 }
 
-#root .container.loading-screen {
-  background: #000A12;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  height: 100vh;
-  font-family: "Work Sans", sans-serif;
-}
-
-#root .container.loading-screen h4,
-#root .container.loading-screen p,
-#root .container.loading-screen .loading-component {
-  margin: 4.5% auto;
-}
-
-#root .container.loading-screen h4 {
-  font-size: 2.5rem;
-  color: #ffffff;
-  text-align: center;
-  font-weight: 700;
-}
-
-#root .container.loading-screen p {
-  font-size: 1.4rem;
-  text-align: center;
-  line-height: 2rem;
-  color: #ffffff;
+#root .RatingsContainer {
+  padding: 2rem;
 }
 /*# sourceMappingURL=main.css.map */
