--- a/src/css/main.css
+++ b/src/css/main.css
@@ -131,12 +131,10 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      margin: auto;
-      padding: 3%;
+      margin: 5%;
       border-radius: 4px;
       background: #212120;
       width: 100%;
-      max-width: 518px;
       height: 550px; }
       #root .container.register-component .box-right .form,
       #root .container.login-component .box-right .form {
