--- a/src/scss/components/_onboarding.scss
+++ b/src/scss/components/_onboarding.scss
@@ -62,12 +62,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: auto;
-    padding: 3%;
+    margin: 5%;
     border-radius: 4px;
     background: $black;
     width: 100%;
-    max-width: 518px;
     height: 550px;
 
     .form {
