--- a/src/scss/components/_onboarding.scss
+++ b/src/scss/components/_onboarding.scss
@@ -1,79 +1,79 @@
 .container.register-component,
 .container.login-component {
-  font-family: $workSans;
-  color: $white;
-  background: $black;
-  margin: 0 auto;
-  width: 100%;
-  min-height: 100vh;
+  // font-family: $workSans;
+  // color: $white;
+  // background: $black;
+  // margin: 0 auto;
+  // width: 100%;
+  // min-height: 100vh;
 
   .onboarding-nav {
-    color: $white;
-    display: flex;
-    width: 95%;
-    margin: 0 auto;
-    justify-content: flex-end;
-    padding: 1.1% 1%;
+    // color: $white;
+    // display: flex;
+    // width: 95%;
+    // margin: 0 auto;
+    // justify-content: flex-end;
+    // padding: 1.1% 1%;
   }
 
   .box-container {
-    display: flex;
-    justify-content: space-between;
-    margin: 0 auto;
-    width: 85%;
+    // display: flex;
+    // justify-content: space-between;
+    // margin: 0 auto;
+    // width: 85%;
   }
 
   .box-left {
-    width: 45%;
-    margin: 0 1%;
-    @include display-flex();
-    flex-direction: column;
-    align-items: center;
-    text-align: left;
-    max-width: 100%;
-    box-sizing: border-box;
+    // width: 45%;
+    // margin: 0 1%;
+    // @include display-flex();
+    // flex-direction: column;
+    // align-items: center;
+    // text-align: left;
+    // max-width: 100%;
+    // box-sizing: border-box;
 
-    .text-container {
-      white-space: nowrap;
+    // .text-container {
+    //   white-space: nowrap;
 
-      h1 {
-        font-size: 5vw;
-      }
+    //   h1 {
+    //     font-size: 5vw;
+    //   }
 
-      h5 {
-        font-size: 1.5vw;
-        font-weight: normal;
-        padding-top: 2rem;
-      }
-    }
+    //   h5 {
+    //     font-size: 1.5vw;
+    //     font-weight: normal;
+    //     padding-top: 2rem;
+    //   }
+    // }
 
-    .image-wrapper {
-      width: 75%;
-      padding: 5% 0;
+  //   .image-wrapper {
+  //     width: 75%;
+  //     padding: 5% 0;
 
-      .logo {
-        width: 100%;
-      }
-    }
-  }
+  //     .logo {
+  //       width: 100%;
+  //     }
+  //   }
+  // }
 
   .box-right {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 5%;
-    border-radius: 4px;
-    background: $black;
-    width: 100%;
-    height: 550px;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-items: center;
+    // margin: 5%;
+    // border-radius: 4px;
+    // background: $black;
+    // width: 100%;
+    // height: 550px;
 
     .form {
-      width: 50%;
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      align-items: center;
+      // width: 50%;
+      // display: flex;
+      // justify-content: center;
+      // flex-direction: column;
+      // align-items: center;
     }
 
     .form-control {
@@ -93,10 +93,10 @@
     }
 
     .bottom-form {
-      width: 100%;
-      display: flex;
-      flex-direction: column-reverse;
-      margin: 0;
+      // width: 100%;
+      // display: flex;
+      // flex-direction: column-reverse;
+      // margin: 0;
 
       .check-box-container {
         display: flex;
@@ -111,24 +111,24 @@
       }
 
       .btn-container {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        padding-bottom: 15px;
+        // width: 100%;
+        // display: flex;
+        // align-items: center;
+        // flex-direction: column;
+        // padding-bottom: 15px;
 
         .signup-btn,
         button.login-btn {
           // align-self: end;
-          border: none;
-          width: 100%;
-          max-width: 100%;
-          height: 50px;
-          border-radius: 4px;
-          background: $turqoise;
-          color: $black;
-          font-size: 14px;
-          margin-bottom: 2%;
+          // border: none;
+          // width: 100%;
+          // max-width: 100%;
+          // height: 50px;
+          // border-radius: 4px;
+          // background: $turqoise;
+          // color: $black;
+          // font-size: 14px;
+          // margin-bottom: 2%;
         }
 
         .fancy {
